Fixed some properties

--- a/KalypsoModelNA/etc/schema/gml/control.properties
+++ b/KalypsoModelNA/etc/schema/gml/control.properties
@@ -11,8 +11,6 @@ rrmMeta_NAControl_rrmMeta_description_label=Description
 rrmMeta_NAControl_rrmMeta_description_tooltip=Short description of this calculation
 rrmMeta_NAControl_rrmMeta_editor_label=Originator
 rrmMeta_NAControl_rrmMeta_editor_tooltip=Name of the originator
-rrmMeta_NAControl_rrmMeta_hoursforecast_label=Forecastperiod
-rrmMeta_NAControl_rrmMeta_hoursforecast_tooltip=Forecastperiod [h]
 rrmMeta_NAControl_rrmMeta_ipver_Blockregen_label=Constant
 rrmMeta_NAControl_rrmMeta_ipver_Blockregen_tooltip=Constant
 rrmMeta_NAControl_rrmMeta_ipver_Zentralregen_label=Central
@@ -29,16 +27,14 @@ rrmMeta_NAControl_rrmMeta_minutesTimestep_label=Timestep
 rrmMeta_NAControl_rrmMeta_minutesTimestep_tooltip=Calculation time interval [min]
 rrmMeta_NAControl_rrmMeta_pns_label=Synthetic Precipitation
 rrmMeta_NAControl_rrmMeta_pns_tooltip=Calculation based on synthetic precipitation
-rrmMeta_NAControl_rrmMeta_returnPeriod_label=Return interval (optional)
+rrmMeta_NAControl_rrmMeta_returnPeriod_label=Return interval
 rrmMeta_NAControl_rrmMeta_returnPeriod_tooltip=Return interval (optional)
-rrmMeta_NAControl_rrmMeta_scenarioId_label=Szenario
-rrmMeta_NAControl_rrmMeta_scenarioId_tooltip=Szenario of calculation case (optional), used to distinguish between disaster test szenarios and real szenarios
-rrmMeta_NAControl_rrmMeta_startforecast_label=Forecast Start
-rrmMeta_NAControl_rrmMeta_startforecast_tooltip=Beginning of forecast calculation resp. end of the model calculation without forecast
+rrmMeta_NAControl_rrmMeta_endsimulation_label=Simulation End
+rrmMeta_NAControl_rrmMeta_endsimulation_tooltip=End of the model calculation
 rrmMeta_NAControl_rrmMeta_startsimulation_label=Simulation Start
 rrmMeta_NAControl_rrmMeta_startsimulation_tooltip=Beginning of the model calculation
-rrmMeta_NAControl_rrmMeta_versionKalypsoNA_label=Version Kalypso-RRM (optional)
-rrmMeta_NAControl_rrmMeta_versionKalypsoNA_tooltip=Version of Kalypso-RRM calculation kernel
+rrmMeta_NAControl_rrmMeta_versionKalypsoNA_label=Version Kalypso-RRM
+rrmMeta_NAControl_rrmMeta_versionKalypsoNA_tooltip=Version of Kalypso-RRM calculation kernel (optional)
 rrmMeta_NAControl_rrmMeta_versionKalypsoNA_latest_label=Latest
 rrmMeta_NAControl_rrmMeta_versionKalypsoNA_latest_tooltip=Latest version
 rrmMeta_NAControl_rrmMeta_versionKalypsoNA_neueste_label=Newest
@@ -49,5 +45,10 @@ rrmMeta_NAControl_rrmMeta_xjah_label=Return Period
 rrmMeta_NAControl_rrmMeta_xjah_tooltip=Return Period [a]
 rrmMeta_NAControl_rrmMeta_xwahl2_label=Duration
 rrmMeta_NAControl_rrmMeta_xwahl2_tooltip=Duration [min]
-rrmMeta_NAControl_rrmMeta_daysSimulationDuration_label=Simulation Duration [d]
-rrmMeta_NAControl_rrmMeta_daysSimulationDuration_tooltip=Simulation Duration [d]
+
+rrmMeta_NAControl_rrmMeta_generatorN_label=Niederschlagsmodell
+rrmMeta_NAControl_rrmMeta_generatorN_tooltip=Niederschlagsmodell zur Erzeugung der Gebietsniederschläge
+rrmMeta_NAControl_rrmMeta_generatorT_label=Temperaturmodell
+rrmMeta_NAControl_rrmMeta_generatorT_tooltip=Temperaturmodell  zur Erzeugung der Gebietstemperaturen
+rrmMeta_NAControl_rrmMeta_generatorE_label=Verdunstungsmodell
+rrmMeta_NAControl_rrmMeta_generatorE_tooltip=Verdunstungsmodell zur Erzeugung der Gebietsverdunstung
