--- a/trunk/KalypsoModelNA/etc/schema/gml/control.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/control.properties
@@ -30,9 +30,9 @@ rrmMeta_NAControl_rrmMeta_pns_tooltip=Calculation based on synthetic precipitati
 rrmMeta_NAControl_rrmMeta_returnPeriod_label=Return interval
 rrmMeta_NAControl_rrmMeta_returnPeriod_tooltip=Return interval (optional)
 rrmMeta_NAControl_rrmMeta_endsimulation_label=Simulation End
-rrmMeta_NAControl_rrmMeta_endsimulation_tooltip=End of the model calculation
+rrmMeta_NAControl_rrmMeta_endsimulation_tooltip=End of the model simulation
 rrmMeta_NAControl_rrmMeta_startsimulation_label=Simulation Start
-rrmMeta_NAControl_rrmMeta_startsimulation_tooltip=Beginning of the model calculation
+rrmMeta_NAControl_rrmMeta_startsimulation_tooltip=Beginning of the model simulation
 rrmMeta_NAControl_rrmMeta_versionKalypsoNA_label=Version Kalypso-RRM
 rrmMeta_NAControl_rrmMeta_versionKalypsoNA_tooltip=Version of Kalypso-RRM calculation kernel (optional)
 rrmMeta_NAControl_rrmMeta_versionKalypsoNA_latest_label=Latest
