--- a/trunk/KalypsoUIRRM/etc/workflow.properties
+++ b/trunk/KalypsoUIRRM/etc/workflow.properties
@@ -2,3 +2,5 @@ timeseriesManagement=Timeseries
 timeseriesManagement_help=Timeseries
 catchmentModels=Catchment Models
 catchmentModels_help=Catchment Models
+simulationManagement=Simulation Management
+simulationManagement_help=Simulation Management
