--- a/KalypsoUIRRM/build.properties
+++ b/KalypsoUIRRM/build.properties
@@ -4,9 +4,11 @@ bin.includes = META-INF/,\
                icons/,\
                about.html,\
                plugin.properties,\
-               plugin_de.properties
+               plugin_de.properties,\
+               etc/
 jars.compile.order = .
 output.. = bin/
 source.. = src/
 src.includes = icons/,\
-               about.html
+               about.html,\
+               etc/
