--- a/trunk/KalypsoUIRRM/plugin.xml
+++ b/trunk/KalypsoUIRRM/plugin.xml
@@ -423,6 +423,14 @@
                visible="false">
          </view>
          <view
+               moveable="false"
+               closeable="false"
+               id="org.kalypso.ui.editor.gistableeditor.GttViewPart"
+               relationship="stack"
+               relative="org.kalypso.ui.views.mapView"
+               visible="false">
+         </view>
+         <view
                id="org.kalypso.ui.rrm.internal.utils.featureTree.TreePropertiesView"
                moveable="false"
                closeable="false"
@@ -448,6 +456,7 @@
          <scenarioDatum classKey="org.kalypso.model.hydrology.timeseries.binding.IStationCollection" id="stations" modelPath="project://.model/timeseries/stations.gml"/>
          <scenarioDatum classKey="org.kalypso.model.hydrology.cm.binding.ICatchmentModel" id="catchmentModels" modelPath=".models/catchmentModels.gml"/>
          <scenarioDatum classKey="org.kalypso.model.hydrology.binding.model.NaModell" id="model" modelPath=".models/modell.gml"/>
+         <scenarioDatum classKey="org.kalypso.model.hydrology.binding.control.SimulationCollection" id="simulations" modelPath=".models/simulations.gml"/>
       </dataSet>
    </extension>
    
