--- a/trunk/KalypsoModelNA/etc/schema/gml/control.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/control.properties
@@ -23,7 +23,7 @@ rrmMeta_NAControl_rrmMeta_ipver_rechtsschiefer\ Regen_tooltip=Right
 rrmMeta_NAControl_rrmMeta_ipver_tooltip=Precipitation Distribution
 rrmMeta_NAControl_rrmMeta_mergeCasePath_label=MergeCasePath
 rrmMeta_NAControl_rrmMeta_mergeCasePath_tooltip=MergeCasePath
-rrmMeta_NAControl_rrmMeta_minutesTimestep_label=Timestep
+rrmMeta_NAControl_rrmMeta_minutesTimestep_label=Timestep [min]
 rrmMeta_NAControl_rrmMeta_minutesTimestep_tooltip=Calculation time interval [min]
 rrmMeta_NAControl_rrmMeta_pns_label=Synthetic Precipitation
 rrmMeta_NAControl_rrmMeta_pns_tooltip=Calculation based on synthetic precipitation
