--- a/trunk/KalypsoModelNA/plugin.xml
+++ b/trunk/KalypsoModelNA/plugin.xml
@@ -256,7 +256,7 @@
               qname="{org.kalypso.namodell.control}initialValues">
         </feature>
         <feature
-              class="org.kalypso.model.hydrology.binding.NAModellControl"
+              class="org.kalypso.model.hydrology.binding.control.NAModellControl"
               qname="{org.kalypso.namodell.control_v2}NAModellControl">
         </feature>
         <feature
@@ -268,7 +268,11 @@
               qname="{org.kalypso.na.control}NAControl">
         </feature>
         <feature
-              class="org.kalypso.model.hydrology.binding.NAControl"
+              class="org.kalypso.model.hydrology.binding.control.SimulationCollection"
+              qname="{org.kalypso.na.control_v2}SimulationCollection">
+        </feature>
+        <feature
+              class="org.kalypso.model.hydrology.binding.control.NAControl"
               qname="{org.kalypso.na.control_v2}NAControl">
         </feature>
      </extension>
