--- a/branches/hwv_sn_st_11-02/KalypsoModelNA/src/org/kalypso/convert/namodel/schema/schemata/control.properties
+++ b/branches/hwv_sn_st_11-02/KalypsoModelNA/src/org/kalypso/convert/namodel/schema/schemata/control.properties
@@ -11,7 +11,7 @@ rrmMeta_NAControl_rrmMeta_description_label=Description
 rrmMeta_NAControl_rrmMeta_description_tooltip=Short description of this calculation
 rrmMeta_NAControl_rrmMeta_editor_label=Originator
 rrmMeta_NAControl_rrmMeta_editor_tooltip=Name of the originator
-rrmMeta_NAControl_rrmMeta_hoursforecast_label=Forecastperiod
+rrmMeta_NAControl_rrmMeta_hoursforecast_label=Forecastperiod [h]
 rrmMeta_NAControl_rrmMeta_hoursforecast_tooltip=Forecastperiod [h]
 rrmMeta_NAControl_rrmMeta_ipver_Blockregen_label=Constant
 rrmMeta_NAControl_rrmMeta_ipver_Blockregen_tooltip=Constant
