--- a/KalypsoModelNA/etc/schema/gml/control.properties
+++ b/KalypsoModelNA/etc/schema/gml/control.properties
@@ -1,8 +1,9 @@
 #platform:/resource//WSPMDemo/naModellSchema/control.xsd
 #Wed Aug 19 13:25:38 CEST 2009
 org.kalypso.na.control_v2=rrmMeta
-rrmMeta_NAControl_description=NAControl
-rrmMeta_NAControl_label=NAControl
+rrmMeta_NAControl_name=Simulation
+rrmMeta_NAControl_description=Simulation
+rrmMeta_NAControl_label=${property:description}
 rrmMeta_NAControl_rrmMeta_creationTime_label=Creation Time
 rrmMeta_NAControl_rrmMeta_creationTime_tooltip=Time when this calculation case was created
 rrmMeta_NAControl_rrmMeta_comment_label=Comment
