--- a/KalypsoModelNA/etc/schema/gml/control.properties
+++ b/KalypsoModelNA/etc/schema/gml/control.properties
@@ -3,7 +3,7 @@
 org.kalypso.na.control_v2=rrmMeta
 rrmMeta_NAControl_name=Simulation
 rrmMeta_NAControl_description=Simulation
-rrmMeta_NAControl_label=${property:description}
+rrmMeta_NAControl_label=${property:description;- leere Beschreibung -}
 rrmMeta_NAControl_rrmMeta_creationTime_label=Creation Time
 rrmMeta_NAControl_rrmMeta_creationTime_tooltip=Time when this calculation case was created
 rrmMeta_NAControl_rrmMeta_comment_label=Comment
