--- a/trunk/KalypsoModelNA/etc/schema/gml/control.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/control.properties
@@ -53,3 +53,6 @@ rrmMeta_NAControl_rrmMeta_generatorT_label=Temperaturmodell
 rrmMeta_NAControl_rrmMeta_generatorT_tooltip=Temperaturmodell  zur Erzeugung der Gebietstemperaturen
 rrmMeta_NAControl_rrmMeta_generatorE_label=Verdunstungsmodell
 rrmMeta_NAControl_rrmMeta_generatorE_tooltip=Verdunstungsmodell zur Erzeugung der Gebietsverdunstung
+
+rrmMeta_NAControl_rrmMeta_initialValueSource_label=Initial Values
+rrmMeta_NAControl_rrmMeta_initialValueSource_tooltip=Source of initial values for this simulation (i.e. Name of the corresponding long term simulation)
