--- a/trunk/KalypsoModelRRMProjectTemplates/nl/en/.model/launch/build.xml
+++ b/trunk/KalypsoModelRRMProjectTemplates/nl/en/.model/launch/build.xml
@@ -140,9 +140,11 @@
 			<input id="Hydrotop" path=".models/hydrotop.gml" relativeToCalcCase="true" />
 			<input id="Parameter" path=".models/parameter.gml" relativeToCalcCase="true" />
 
-			<input id="NiederschlagDir" path="Precipitation" relativeToCalcCase="true" />
-			<input id="KlimaDir" path="Climate" relativeToCalcCase="true" />
-			<input id="ZuflussDir" path="Tributary" relativeToCalcCase="true" />
+            <input id="PrecipitationTimeseries" path="ZR_Niederschlag" relativeToCalcCase="true" />
+            <input id="TemperatureTimeseries" path="ZR_Temperatur" relativeToCalcCase="true" />
+            <input id="EvaporationTimeseries" path="ZR_Verdunstung" relativeToCalcCase="true" />
+
+            <input id="ZuflussDir" path="Tributary" relativeToCalcCase="true" />
 			<input id="PegelDir" path="Gauge" relativeToCalcCase="true" />
 			<input id="ErgebnisDir" path="Results" relativeToCalcCase="true" />
 			<input id="LZSIM_IN" path="InitialValues" relativeToCalcCase="true" />
