--- a/trunk/KalypsoModelNA/build.properties
+++ b/trunk/KalypsoModelNA/build.properties
@@ -5,7 +5,10 @@ bin.includes = META-INF/,\
                META-INF/,\
                about.html,\
                plugin.properties,\
-               etc/catalog.xml
+               etc/catalog.xml,\
+               etc/catalog/,\
+               etc/schema/
 jars.compile.order = .
-src.includes = about.html
+src.includes = about.html,\
+               etc/
 source.. = src/
