--- a/trunk/KalypsoModelRRMProjectTemplates/nl/en/.model/launch/build.xml
+++ b/trunk/KalypsoModelRRMProjectTemplates/nl/en/.model/launch/build.xml
@@ -39,84 +39,6 @@
         </kalypso.changeGml>		
 	</target>
 
-	<target name="setProperties" depends="info">
-		<echo message="set up variables" />
-		<kalypso.gmlProperty gmlURL="${calc.url}/.models/calculation.gml">
-			<property name="startsim" featurepath="/" featureProperty="startsimulation" />
-			<property name="stopsim" featurepath="/" featureProperty="endsimulation" />
-			<property name="interval.amount" featurepath="/" featureProperty="minutesTimestep" />
-		</kalypso.gmlProperty>
-
-		<echo message="from           ${startsim}" />
-		<echo message="to           ${stopsim}" />
-
-		<!-- correct times for filters -->
-		<script language="javascript">
-			intervalAmount = java.lang.Integer.parseInt(project.getProperty("interval.amount"));
-			startsimTime = javax.xml.bind.DatatypeConverter.parseDateTime( startsim );
-			startsimTime.add(java.util.Calendar.MINUTE, -intervalAmount);
-			project.setProperty("startsim", javax.xml.bind.DatatypeConverter.printDateTime( startsimTime ));
-			
-			stopsimTime = javax.xml.bind.DatatypeConverter.parseDateTime( stopsim );
-			stopsimTime.add(java.util.Calendar.MINUTE, 3*intervalAmount);
-			project.setProperty("stopsim", javax.xml.bind.DatatypeConverter.printDateTime( stopsimTime ));
-		</script>
-	</target>
-
-	<target name="updateOmbrometer" depends="setProperties">
-		<!-- updateOmbrometer: ombrometer von Datacenter (oder lokal)-abholen -->
-		<echo message="update ombrometer (precipitation gauge - measurement)" />
-		<delete dir="${calc.dir}/Precipitation" />
-		<mkdir dir="${calc.dir}/Precipitation" />
-		<kalypso.copyObservation gml="${project.url}/.model/observationConf/ombrometer.gml" featurePath="ombrometerMember" context="${calc.url}" targetobservationdir="${calc.dir}/Precipitation">
-			<source property="NRepository" from="${startsim}" to="${stopsim}" />
-		</kalypso.copyObservation>
-	</target>
-
-
-	<target name="updatePegelMessung" depends="setProperties">
-		<echo message="update gauging stations (measurement)" />
-		<delete dir="${calc.dir}/Gauge" />
-		<mkdir dir="${calc.dir}/Gauge" />
-		<kalypso.copyObservation gml="${project.url}/.model/observationConf/ObsQMapping.gml" featurePath="mappingMember" context="${calc.url}" targetobservationdir="${calc.dir}/Gauge">
-			<source property="inObservationLink" from="${startsim}" to="${stopsim}" />
-		</kalypso.copyObservation>
-	</target>
-
-	<target name="updateZuflussMessung" depends="setProperties">
-		<echo message="update inflow - tributary/ inflow (measurement)" />
-		<delete dir="${calc.dir}/Tributary" />
-		<mkdir dir="${calc.dir}/Tributary" />
-		<kalypso.copyObservation gml="${project.url}/.model/observationConf/ObsQZuMapping.gml" featurePath="mappingMember" context="${calc.url}" targetobservationdir="${calc.dir}/Tributary">
-			<source property="inObservationLink" from="${startsim}" to="${stopsim}" />
-		</kalypso.copyObservation>
-	</target>
-
-	<target name="updateObsT" depends="setProperties">
-		<echo message="update temperature (measurement)" />
-		<delete dir="${calc.dir}/Climate" />
-		<mkdir dir="${calc.dir}/Climate" />
-		<kalypso.copyObservation gml="${project.url}/.model/observationConf/ObsTMapping.gml" featurePath="mappingMember" context="${calc.url}" targetobservationdir="${calc.dir}/Climate">
-			<source property="inObservationLink" from="${startsim}" to="${stopsim}" />
-		</kalypso.copyObservation>
-	</target>
-
-	<target name="updateObsE" depends="setProperties">
-		<echo message="update evaporation (measurement)" />
-		<kalypso.copyObservation gml="${project.url}/.model/observationConf/ObsEMapping.gml" featurePath="mappingMember" context="${calc.url}" targetobservationdir="${calc.dir}/Climate">
-			<source property="inObservationLink" from="${startsim}" to="${stopsim}" />
-		</kalypso.copyObservation>
-	</target>
-
-	<target name="updateAll" depends="updateOmbrometer,updatePegelMessung,updateObsT,updateObsE,updateZuflussMessung" description="Aktualisiert eine Rechenvariante">
-		<echo message="update all time series: ${calc.dir}" />
-	</target>
-
-
-	<target name="update" depends="updateAll" description="Aktualisiert eine Rechenvariante">
-		<echo message="update time series: ${calc.dir}" />
-	</target>
-
 	<target name="setBasicModel" description="Ersetzt das Basismodell durch das Modell in der Rechenvariante">
 		<echo message="Rechenvariante als Basismodell übernehmen: ${calc.dir}" />
 
@@ -126,12 +48,13 @@
 
 		<eclipse.refreshLocal resource="${project.path}/Basis/.models" depth="one" />
 	</target>
+	
 	<!--
         =================================
         target: runCalculation
         =================================
       -->
-	<target name="runCalculation" depends="setProperties" description="Runs the simulation">
+	<target name="runCalculation" description="Runs the simulation">
 		<echo message="Simulation is running: ${calc.path}" />
 		<kalypso.runCalculation calcCaseFolder="${calc.path}" typeid="KalypsoNA">
 			<input id="MetaSteuerdaten" path=".models/calculation.gml" relativeToCalcCase="true" />
@@ -140,9 +63,8 @@
 			<input id="Hydrotop" path=".models/hydrotop.gml" relativeToCalcCase="true" />
 			<input id="Parameter" path=".models/parameter.gml" relativeToCalcCase="true" />
 
-            <input id="PrecipitationTimeseries" path="ZR_Niederschlag" relativeToCalcCase="true" />
-            <input id="TemperatureTimeseries" path="ZR_Temperatur" relativeToCalcCase="true" />
-            <input id="EvaporationTimeseries" path="ZR_Verdunstung" relativeToCalcCase="true" />
+            <input id="NiederschlagDir" path="Precipitation" relativeToCalcCase="true" />
+            <input id="KlimaDir" path="Climate" relativeToCalcCase="true" />
 
             <input id="ZuflussDir" path="Tributary" relativeToCalcCase="true" />
 			<input id="PegelDir" path="Gauge" relativeToCalcCase="true" />
