--- a/trunk/KalypsoModelRRMProjectTemplates/build.properties
+++ b/trunk/KalypsoModelRRMProjectTemplates/build.properties
@@ -5,7 +5,12 @@ bin.includes = .project,\
                plugin.properties,\
                plugin.xml,\
                plugin_de.properties,\
-               about.html
+               about.html,\
+               nl/,\
+               Basis/,\
+               .model/,\
+               .settings/,\
+               build.properties
 src.includes = plugin_de.properties,\
                plugin.xml,\
                plugin.properties,\
@@ -14,4 +19,6 @@ src.includes = plugin_de.properties,\
                build.properties,\
                META-INF/,\
                .project,\
-               about.html
+               about.html,\
+               nl/,\
+               Basis/
