Bankline shape export: shape is basically written, no geometries so far...

--- a/KalypsoModelWspmTuhhUI/plugin.properties
+++ b/KalypsoModelWspmTuhhUI/plugin.properties
@@ -73,3 +73,6 @@ org.kalypso.model.wspm.tuhh.ui.export.tripple.TrippleExportProfilesWizard.descri
 
 org.kalypso.model.wspm.tuhh.ui.export.knauf.KnaufExportProfilesWizard.name=Knauf (.wspr)
 org.kalypso.model.wspm.tuhh.ui.export.knauf.KnaufExportProfilesWizard.description=Converts selected profiles into the Knauf profile format.
+
+org.kalypso.model.wspm.tuhh.ui.export.bankline.BanklineExportWizard.name=Bankline
+org.kalypso.model.wspm.tuhh.ui.export.bankline.BanklineExportWizard.description=Exports banklines of selected water bodies / reaches
